5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4476/executions/1758_1185.log
== TEST (2019-05-28 11:33:04) 
-- CODE:
from numpy import *

g = array(eval(input("digite o valor: ")))

i = 0
cont = 0

while (i <size(g)):
	if g[i] > 99:
		print(i)
		cont = cont 1
i = i + 1
print(cont)
-- ERROR:
File "XXXX", line 11
    cont = cont 1
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:33:10) 
-- CODE:
from numpy import *

g = array(eval(input("digite o valor: ")))

i = 0
cont = 0

while (i <size(g)):
	if g[i] > 99:
		print(i)
	cont = cont 1
i = i + 1
print(cont)
-- ERROR:
File "XXXX", line 11
    cont = cont 1
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:33:25) 
-- CODE:
from numpy import *

g = array(eval(input("digite o valor: ")))

i = 0
cont = 0

while (i <size(g)):
	if g[i] > 99:
		print(i)
		cont = cont 1
i = i + 1
print(cont)
-- ERROR:
File "XXXX", line 11
    cont = cont 1
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:33:34) 
-- CODE:
from numpy import *

g = array(eval(input("digite o valor: ")))

i = 0
cont = 0

while (i <size(g)):
	if g[i] > 99:
		print(i)
		cont = cont + 1
i = i + 1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:38:06) 
-- CODE:
from numpy import *

g = array(eval(input("digite o valor: ")))

i = 0
cont = 0

while (i <size(g)):
	if g[i] > 99:
		print(i)
		cont = cont + 1
   i = i + 1
print(cont)
-- ERROR:
File "XXXX", line 12
    i = i + 1
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:38:11) 
-- CODE:
from numpy import *

g = array(eval(input("digite o valor: ")))

i = 0
cont = 0

while (i <size(g)):
	if g[i] > 99:
		print(i)
		cont = cont + 1
		i = i + 1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:38:28) 
-- CODE:
from numpy import *

g = array(eval(input("digite o valor: ")))

i = 0
cont = 0

while (i <size(g)):
	if g[i] > 99:
		print(i)
		cont = cont + 1
		i = i + 1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:39:27) 
-- CODE:
from numpy import *

g = array(eval(input("digite o valor: ")))

i = 0
cont = 0

while i <size(g):
	if g[i] > 99:
		print(i)
		cont = cont + 1
		i = i + 1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:41:46) 
-- CODE:
from numpy import *

g = array(eval(input("digite o valor: ")))

i = 0
cont = 0

while i <size(g):
	if g[i] > 99:
		print(i)
		cont = cont + 1
		i = i + 1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:42:20) 
-- CODE:
from numpy import *

g = array(eval(input("digite o valor: ")))

i = 0
cont = 0

while i <size(g):
	if g[i] > 99:
		print(i)
		cont = cont + 1
		i = i + 1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:42:31) 
-- CODE:
from numpy import *

g = array(eval(input("digite o valor: ")))

i = 0
cont = 0

while i <size(g):
	if g[i] > 99:
		print(i)
		cont = cont + 1
		i = i + 1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:42:40) 
-- CODE:
from numpy import *

g = array(eval(input("digite o valor: ")))

i = 0
cont = 0

while i <size(g):
	if g[i] > 99:
		print(i)
		cont = cont + 1
	i = i + 1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:43:01) 
-- CODE:
from numpy import *

g = array(eval(input("digite o valor: ")))

i = 0
cont = 0

while i <size(g):
	if g[i] > 99:
		print(i)
		cont = cont + 1
	i = i + 1
print(cont)
-- EXECUTION TIME:
0.421425
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
